--- a/hw-1.ipynb
+++ b/hw-1.ipynb
@@ -12,7 +12,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 102,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [
     {
@@ -47,7 +47,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 103,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -87,7 +87,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 104,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -122,14 +122,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 105,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Выручка компании помесячно: {'09': 25647, '12': 45452, '10': 28645, '11': 25098}\n"
+      "Выручка компании помесячно: {'09': 25647, '12': 45452, '10': 28645, '11': 25098}\n",
+      "Выручка {9: 25647, 10: 28645, 11: 25098, 12: 45452}\n"
      ]
     }
    ],
@@ -137,14 +138,22 @@
     "def month_revenue(date_list: list, purchases_list: list) -> dict:\n",
     "    month_rev = {}\n",
     "    for i in range(len(date_list)):\n",
-    "        if date[i].split(\"-\")[1] in month_rev:\n",
-    "            month_rev[date[i].split(\"-\")[1]] += purchases_list[i]\n",
+    "        if date_list[i].split(\"-\")[1] in month_rev:\n",
+    "            month_rev[date_list[i].split(\"-\")[1]] += purchases_list[i]\n",
     "        else:\n",
-    "            month_rev[date[i].split(\"-\")[1]] = purchases_list[i]\n",
+    "            month_rev[date_list[i].split(\"-\")[1]] = purchases_list[i]\n",
     "\n",
     "    return month_rev\n",
     "\n",
-    "print(f\"Выручка компании помесячно: {month_revenue(date, purchases)}\")"
+    "print(f\"Выручка компании помесячно: {month_revenue(date, purchases)}\")\n",
+    "\n",
+    "def rev(date_list, purchases_list):\n",
+    "    # mrev = {}\n",
+    "    return {month: sum([purchases_list[i] for i in range(len(date_list)) if int(date_list[i].split('-')[1]) == month]) \\\n",
+    "            for month in range(1, 13)  \\\n",
+    "            if sum([purchases_list[i] for i in range(len(date_list)) if int(date_list[i].split('-')[1]) == month]) != 0}\n",
+    "\n",
+    "print(f\"Выручка {rev(date, purchases)}\")\n"
    ]
   }
  ],
