--- a/hw_2.ipynb
+++ b/hw_2.ipynb
@@ -23,7 +23,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 73,
    "metadata": {},
    "outputs": [
     {
@@ -228,19 +228,19 @@
        "[5 rows x 21 columns]"
       ]
      },
-     "execution_count": 10,
+     "execution_count": 73,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "df = pd.read_csv('kc-house-data.csv')\n",
+    "df = pd.read_csv('kc-house-data.csv', sep=',')\n",
     "df.head(5)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 74,
    "metadata": {},
    "outputs": [
     {
@@ -297,7 +297,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 75,
    "metadata": {},
    "outputs": [
     {
@@ -341,7 +341,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 76,
    "metadata": {},
    "outputs": [
     {
@@ -371,7 +371,7 @@
        "dtype: int64"
       ]
      },
-     "execution_count": 17,
+     "execution_count": 76,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -382,7 +382,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 77,
    "metadata": {},
    "outputs": [
     {
@@ -659,7 +659,7 @@
        "max    98199.000000     47.777600   -121.315000    6210.000000  871200.000000  "
       ]
      },
-     "execution_count": 18,
+     "execution_count": 77,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -670,7 +670,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 78,
    "metadata": {},
    "outputs": [
     {
@@ -726,7 +726,7 @@
        "freq                142"
       ]
      },
-     "execution_count": 19,
+     "execution_count": 78,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -751,7 +751,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 79,
    "metadata": {},
    "outputs": [
     {
@@ -760,7 +760,7 @@
        "(75000.0, 7700000.0)"
       ]
      },
-     "execution_count": 27,
+     "execution_count": 79,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -771,7 +771,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 80,
    "metadata": {},
    "outputs": [
     {
@@ -780,7 +780,7 @@
        "15106.97"
       ]
      },
-     "execution_count": 29,
+     "execution_count": 80,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -791,7 +791,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 81,
    "metadata": {},
    "outputs": [
     {
@@ -800,7 +800,7 @@
        "2079.9"
       ]
      },
-     "execution_count": 31,
+     "execution_count": 81,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -811,27 +811,27 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 87,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "0.14"
+       "13.77"
       ]
      },
-     "execution_count": 33,
+     "execution_count": 87,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "round(df['sqft_living'].mean() / df['sqft_lot'].mean(), 2)"
+    "round(df['sqft_living'].mean() * 100 / df['sqft_lot'].mean(), 2)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": 88,
    "metadata": {},
    "outputs": [
     {
@@ -847,7 +847,7 @@
        "Name: count, dtype: int64"
       ]
      },
-     "execution_count": 38,
+     "execution_count": 88,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -858,7 +858,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 43,
+   "execution_count": 89,
    "metadata": {},
    "outputs": [
     {
@@ -894,7 +894,7 @@
        " Name: count, dtype: int64)"
       ]
      },
-     "execution_count": 43,
+     "execution_count": 89,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -905,7 +905,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 46,
+   "execution_count": 90,
    "metadata": {},
    "outputs": [
     {
@@ -914,7 +914,7 @@
        "(1900, 2015)"
       ]
      },
-     "execution_count": 46,
+     "execution_count": 90,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -938,7 +938,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 50,
+   "execution_count": 101,
    "metadata": {},
    "outputs": [
     {
@@ -947,18 +947,18 @@
        "401372.68"
       ]
      },
-     "execution_count": 50,
+     "execution_count": 101,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "round(['price'].mean(), 2)"
+    "round(df[df['bedrooms'] == 2]['price'].mean(), 2)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 54,
+   "execution_count": 102,
    "metadata": {},
    "outputs": [
     {
@@ -967,7 +967,7 @@
        "20442.52"
       ]
      },
-     "execution_count": 54,
+     "execution_count": 102,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -978,7 +978,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 62,
+   "execution_count": 103,
    "metadata": {},
    "outputs": [
     {
@@ -987,7 +987,7 @@
        "914"
       ]
      },
-     "execution_count": 62,
+     "execution_count": 103,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -998,7 +998,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 67,
+   "execution_count": 104,
    "metadata": {},
    "outputs": [
     {
@@ -1007,7 +1007,7 @@
        "1488885.12"
       ]
      },
-     "execution_count": 67,
+     "execution_count": 104,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1035,27 +1035,27 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 69,
+   "execution_count": 108,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "41"
+       "36"
       ]
      },
-     "execution_count": 69,
+     "execution_count": 108,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "df[(df['waterfront'] == 1) & (df['bathrooms'] >= 3) & (df['sqft_basement'] != 0)].shape[0]"
+    "df[(df['waterfront'] == 1) & (df['bathrooms'] > 3) & (df['sqft_basement'] != 0)].shape[0]"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 70,
+   "execution_count": 109,
    "metadata": {},
    "outputs": [
     {
@@ -1064,7 +1064,7 @@
        "(1295000.0, 3000000.0)"
       ]
      },
-     "execution_count": 70,
+     "execution_count": 109,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1075,7 +1075,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 72,
+   "execution_count": 110,
    "metadata": {},
    "outputs": [
     {
@@ -1084,7 +1084,7 @@
        "3.0"
       ]
      },
-     "execution_count": 72,
+     "execution_count": 110,
      "metadata": {},
      "output_type": "execute_result"
     }
